--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div><a href="add.html">tạo mới blog</a></div>
-    <div><a href="https://vt.tiktok.com/ZS8mFKPYJ/">Link Tiktok</a></div>
+    <div><a href="https://vt.tiktok.com/ZS8mFKPYJ/">Link Tiktok ne</a></div>
 </body>
 </html>
 <script src="https://www.gstatic.com/firebasejs/9.12.1/firebase-app-compat.js"></script>
