--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a style="text-align: center; padding: 5px; border: 2px black solid; " href="add.html">tạo mới blog</a>
+    <div><a href="add.html">tạo mới blog</a></div>
+    <div><a href="https://vt.tiktok.com/ZS8mFKPYJ/">Link Tiktok</a></div>
 </body>
 </html>
 <script src="https://www.gstatic.com/firebasejs/9.12.1/firebase-app-compat.js"></script>
